[package]
name = "libimhex-rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imhex-macros = { path = "proc_macros" }
imgui = { path = "imgui-rs" }

cxx = "1.0.55"
autocxx = "0.16"

[build-dependencies]
autocxx-build = "0.16"
#cxx-build = "1.0.55"
